--- a/booqo-web/src/app/features/dashboard/pages/dashboard/dashboard.page.html
+++ b/booqo-web/src/app/features/dashboard/pages/dashboard/dashboard.page.html
@@ -1,6 +1,9 @@
 <app-navbar></app-navbar>
 
 <main class="dashboard-content">
-    <h1>Bienvenido al Panel de Control</h1>
-    <p>Aquí gestionaremos la clínica.</p>
+    <div class="p-6">
+        <h1 class="text-3xl font-bold">Panel de Control</h1>
+        <p class="text-gray-600">Bienvenido a la gestión de <strong>{{ centerName() }}</strong></p>
+
+    </div>
 </main>
