--- a/booqo-web/src/app/features/dashboard/pages/dashboard/dashboard.page.html
+++ b/booqo-web/src/app/features/dashboard/pages/dashboard/dashboard.page.html
@@ -6,4 +6,5 @@
         <p class="text-gray-600">Bienvenido a la gestión de <strong>{{ centerName() }}</strong></p>
 
     </div>
+    <app-main-layout></app-main-layout>
 </main>
